# xlsxwriter-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Cross.toml  README.md  appveyor.yml
.cross/aarch64-linux-gnu/: Dockerfile
.cross/arm-linux-gnueabihf/: Dockerfile
.github/workflows/: rust.yml
examples/: hello_spreadsheet.rs
libxlsxwriter/: Cargo.toml
libxlsxwriter-sys/: Cargo.toml  build.rs  wrapper.h
libxlsxwriter/examples/: hello_spreadsheet.rs
libxlsxwriter/src/: chart.rs  error.rs  format.rs  lib.rs  prelude.rs  test.rs  validation.rs  workbook.rs  worksheet.rs
libxlsxwriter/src/chart/: constants.rs  mod.rs  series.rs  structs.rs
libxlsxwriter/src/worksheet/: datetime.rs  filter.rs  mod.rs  table.rs  validation.rs
libxlsxwriter/src/worksheet/conditional_format/: average.rs  cell.rs  data_bar.rs  icon.rs  mod.rs  text.rs  three_color.rs  time_period.rs  two_color.rs
src/: chart.rs  format.rs  lib.rs  test.rs  validation.rs  workbook.rs  worksheet.rs
