[package]
name = "xlsxwriter"
version = "0.1.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"
readme = "README.md"

description = "Rust binding of libxlsxwriter"
repository = "https://github.com/informationsea/xlsxwriter-rs"
homepage = "https://github.com/informationsea/xlsxwriter-rs"

keywords = ["excel", "xlsx"]
categories = ["api-bindings", "encoding", "text-processing"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libxlsxwriter-sys = {path = "libxlsxwriter-sys"}