[package]
name = "libxlsxwriter-sys"
version = "1.1.4"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"
build = "build.rs"

description = "Rust binding of libxlsxwriter"
repository = "https://github.com/informationsea/xlsxwriter-rs"
homepage = "https://github.com/informationsea/xlsxwriter-rs"

keywords = ["excel", "xlsx", "ffi"]
categories = ["external-ffi-bindings"]
license = "MIT"

exclude = ["third_party/libxlsxwriter/docs", "third_party/libxlsxwriter/test", "third_party/zlib/contrib"]

[dependencies]

[features]
no-md5 = []
use-openssl-md5 = []
system-zlib = []

[build-dependencies]
cc = "1.0"
bindgen = ">= 0.63, < 0.64"
