[package]
name = "xlsxwriter"
version = "0.5.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"
readme = "../README.md"

description = "Write xlsx file with number, formula, string, formatting, autofilter, merged cells, data validation and more."
repository = "https://github.com/informationsea/xlsxwriter-rs"
homepage = "https://github.com/informationsea/xlsxwriter-rs"

keywords = ["excel", "xlsx"]
categories = ["api-bindings", "encoding", "text-processing"]
license = "Apache-2.0"

[features]
no-md5 = ["libxlsxwriter-sys/no-md5"]
use-openssl-md5 = ["libxlsxwriter-sys/use-openssl-md5"]
system-zlib = ["libxlsxwriter-sys/system-zlib"]

[dependencies]
libxlsxwriter-sys = {path = "../libxlsxwriter-sys", version = "^1.1.4"}
