[package]
name = "xlsxwriter"
version = "0.5.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"
readme = "../README.md"

description = "Write xlsx file with number, formula, string, formatting, autofilter, merged cells, data validation and more."
repository = "https://github.com/informationsea/xlsxwriter-rs"
homepage = "https://github.com/informationsea/xlsxwriter-rs"

keywords = ["excel", "xlsx"]
categories = ["api-bindings", "encoding", "text-processing"]
license = "Apache-2.0"

[features]
default = ["chrono"]
no-md5 = ["libxlsxwriter-sys/no-md5"]
use-openssl-md5 = ["libxlsxwriter-sys/use-openssl-md5"]
system-zlib = ["libxlsxwriter-sys/system-zlib"]
chrono = ["dep:chrono"]

[dependencies]
libxlsxwriter-sys = {path = "../libxlsxwriter-sys", version = "=1.1.5-a"}
chrono = { version = "0.4", optional = true }

[dev-dependencies]
chrono = { version = "0.4" }